--- a/components/advisory-council.module.scss
+++ b/components/advisory-council.module.scss
@@ -25,6 +25,19 @@
     width: max-content;
     margin-top: auto;
   }
+  &:last-child {
+    position: relative;
+    &::before {
+      position: absolute;
+      left: 0;
+      top: 5%;
+      content: "";
+      display: block;
+      width: 1rem;
+      height: 80%;
+      border-left: 1px solid #ffb013;
+    }
+  }
 }
 
 .body {
