--- a/components/advisory-council.module.scss
+++ b/components/advisory-council.module.scss
@@ -1,15 +1,16 @@
 .section {
-  //background: #f7f8fb;
-  padding: 3rem 0 5rem;
+  background: #f7f8fb;
+  padding: 7rem 0 5rem;
   & > div {
     display: flex;
     justify-content: center;
+    align-items: center;
     gap: 3rem;
   }
 }
 
 .card {
-  margin-top: 4rem;
+  margin-top: 3rem;
   width: 25%;
   display: flex;
   flex-direction: column;
@@ -19,6 +20,10 @@
     box-shadow: 0px 10px 40px rgba(28, 51, 84, 0.07);
     z-index: 2;
     flex-shrink: 0;
+  }
+  h3 {
+    margin-bottom: 2rem;
+    text-align: center;
   }
   a {
     display: block;
@@ -30,21 +35,18 @@
     &::before {
       position: absolute;
       left: 0;
-      top: 5%;
+      top: 10%;
       content: "";
       display: block;
-      width: 1rem;
-      height: 80%;
+      height: 75%;
       border-left: 1px solid #ffb013;
     }
   }
 }
 
 .body {
-  margin-top: -9rem;
   padding: 2rem;
-  padding-top: 11.5rem;
-  background: #fff;
+  //background: #fff;
   //box-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
   width: 100%;
   height: 100%;
@@ -77,6 +79,18 @@
     }
     .card {
       width: 100%;
+      h3 {
+        margin-top: 4rem;
+      }
+      &:last-child {
+        &::before {
+          top: 0;
+          left: 10%;
+          width: 80%;
+          border-left: none;
+          border-top: 1px solid #ffb013;
+        }
+      }
     }
   }
 }
