--- a/components/advisory-council.module.scss
+++ b/components/advisory-council.module.scss
@@ -4,8 +4,8 @@
   & > div {
     display: flex;
     justify-content: center;
-    align-items: center;
-    gap: 3rem;
+    align-items: flex-start;
+    gap: 1.5rem;
   }
 }
 
@@ -20,6 +20,8 @@
     box-shadow: 0px 10px 40px rgba(28, 51, 84, 0.07);
     z-index: 2;
     flex-shrink: 0;
+    height: 170px;
+    width: 170px;
   }
   h3 {
     margin-bottom: 2rem;
@@ -32,6 +34,7 @@
   }
   &:last-child {
     position: relative;
+    margin-top: -1rem;
     &::before {
       position: absolute;
       left: 0;
@@ -45,7 +48,7 @@
 }
 
 .body {
-  padding: 2rem;
+  padding: 1rem;
   //background: #fff;
   //box-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
   width: 100%;
@@ -56,18 +59,19 @@
     text-align: center;
   }
   p {
-    margin-top: 0.5rem;
+    margin-top: 0.25rem;
   }
   h2 {
     font-size: 1.8rem;
-    margin-bottom: 0.5rem;
-    padding: 0.5rem;
-    //border: 2px solid #b3383d;
-    //color: #b3383d;
+    padding: 1rem 0.5rem 0.5rem;
+  }
+  h4 {
+    font-size: 1.3rem;
+    line-height: 1.45;
   }
 
   h4:nth-child(4) {
-    margin-top: 1rem;
+    margin-top: 0.5rem;
   }
 }
 
@@ -83,6 +87,7 @@
         margin-top: 4rem;
       }
       &:last-child {
+        margin-top: 0;
         &::before {
           top: 0;
           left: 10%;
